<resources>
    <string name="app_name">Taskopolis</string>
    <string name="app_tagline">Your to-do list app search ends here</string>
    <string name="title_activity_signin">SignInActivity</string>
    <string name="title_signin">Sign in</string>
    <string name="title_activity_signup">SignUpActivity</string>
    <string name="title_signup">Sign Up</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="prompt_phone">Phone number</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_signin">Sign In</string>
    <string name="action_signup">Sign Up</string>
    <string name="action_forgot_password">Forgot password?</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="no_account">Don\'t have an account? </string>
    <string name="have_account">Already have an account? </string>
    <string name="signin_failed">SignIn failed</string>
</resources>