<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_signin"
            android:textAlignment="viewStart"
            android:textColor="@color/background_dark"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/textFieldSignInEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/grey" />

        <EditText
            android:id="@+id/textFieldSignInPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="25dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textColorHint="@color/grey" />

        <Button
            android:id="@+id/btnSignIn"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="48dp"
            android:backgroundTintMode="screen"
            android:checkable="false"
            android:fontFamily="@font/ibmplex_mono_semibold"
            android:text="@string/action_signin"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal"
            app:backgroundTint="@color/background_dark"
            app:cornerRadius="8dp"
            app:rippleColor="@color/dark_grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:textAlignment="center">

            <TextView
                android:id="@+id/textViewNoAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/no_account"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/linkSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:padding="4dp"
                android:text="@string/action_signup"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>