<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/space_grotesk_bold"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/background_dark"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/textViewAppTagline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibmplex_mono_regular"
            android:text="@string/app_tagline"
            android:textAlignment="center"
            android:textColor="@color/background_dark"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnSignUp"
            style="@style/Widget.Material3.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="80dp"
            android:backgroundTintMode="add"
            android:checkable="false"
            android:fontFamily="@font/ibmplex_mono_semibold"
            android:hapticFeedbackEnabled="true"
            android:text="@string/action_signup"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal"
            app:backgroundTint="@color/background_dark"
            app:cornerRadius="8dp"
            app:rippleColor="@color/grey" />

        <Button
            android:id="@+id/btnSignIn"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTintMode="add"
            android:checkable="false"
            android:fontFamily="@font/ibmplex_mono_semibold"
            android:hapticFeedbackEnabled="true"
            android:text="@string/action_signin"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="normal"
            app:backgroundTint="@color/background_white"
            app:cornerRadius="8dp"
            app:rippleColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>